tests/snapshots/profile_golden_file_tests__golden_include_only.snap
---
source: tests/profile_golden_file_tests.rs
expression: "&normalized"
---
{
  "profile": {
    "imports": [
      {
        "href": "catalog.json",
        "include-controls": [
          {
            "with-ids": [
              "AC-1",
              "AC-2",
              "AC-3"
            ]
          }
        ]
      }
    ],
    "metadata": {
      "last-modified": "2026-01-01T00:00:00Z",
      "oscal-version": "1.2.3",
      "title": "Policy Baseline Profile",
      "version": "1.0.0"
    },
    "uuid": "00000000-0000-0000-0000-000000000000"
  }
}
